# aegis

./: .dockerignore  .gitignore  01-idea-and-problem.md  02-market-analysis.md  03-architecture.md  04-uniqueness-and-compliance.md  05-features-and-decisions.md  06-mvp-and-next-steps.md  07-verification-and-proof.md  Aegis-Docs.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  aegis.example.yaml  claude-snippet.md  docker-compose.yml  pyproject.toml
.github/workflows/: image.yml  release.yml  security.yml  tests.yml
argocd/: application.yaml
deploy/: deployment.yaml  kustomization.yaml  networkpolicy.yaml  service.yaml
packaging/homebrew/: README.md  aegis.rb
src/: README.md  app.py  bench_tokens.py  index.py  ingest.py  judge.py  query_rewriter.py  requirements.txt  security.py
src/aegis/: __init__.py  app.py  audit.py  audit_sink.py  auth.py  bench_tokens.py  cli.py  config.py  container.py  index.py  ingest.py  judge.py  logger.py  mcp_server.py  provenance.py  query_rewriter.py
src/aegis_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_audit.py  test_locate.py  test_mcp.py  test_provenance.py
