[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-docs"
version = "0.2.0"
description = "Air-gapped local documentation service for AI coding agents"
readme = "src/README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2",
]

[project.optional-dependencies]
# Semantic search layer (recommended). Without it the service runs BM25-only.
semantic = ["fastembed", "numpy"]

[project.scripts]
aegis = "aegis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
