[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-docs"
version = "0.2.0"
description = "Air-gapped local documentation service for AI coding agents"
readme = "src/README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2",
    "cryptography",          # ed25519 signing of the provenance manifest
    "pyyaml",                # aegis.yaml config
]

[project.optional-dependencies]
# Semantic search layer (recommended). Without it the service runs BM25-only.
semantic = ["fastembed", "numpy"]
s3 = ["boto3"]                       # ship audit logs to S3
gcs = ["google-cloud-storage"]       # ship audit logs to GCS

[project.scripts]
aegis = "aegis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
